--- a/Contact.html
+++ b/Contact.html
@@ -11,5 +11,19 @@
 </head>
 <body>
     
+    <div class="bg">
+        <nav>
+            <ul class="navbar">
+                <li class="left"><a href="index.html">Welcome</a></li>
+                <li class="left"><a href="Menu.html">Menu</a></li>
+                <li class="right"><a href="Reserve.html">Reservations</a></li>
+                <li class="right"><a href="Order.html">Order now</a></li>
+                <li class="right"><a href="Contact.html">Contact</a></li>
+
+            </ul>
+        </nav>
+
+    </div>
+
 
 </body>
