--- a/Menu.html
+++ b/Menu.html
@@ -3,13 +3,57 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="stylesheet" href="src/style.css">
+  <link rel="stylesheet" href="src/style_menu.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
   <title>Menu</title>
 
 </head>
 <body>
     
+    <div class="bg">
+        <nav>
+            <ul class="navbar">
+                <li class="left"><a href="index.html">Welcome</a></li>
+                <li class="left"><a href="Menu.html" style="color:rgb(185, 123, 133)">Menu</a></li>
+                <li class="right"><a href="Reserve.html">Reservations</a></li>
+                <li class="right"><a href="Order.html">Order now</a></li>
+                <li class="right"><a href="Contact.html">Contact</a></li>
+
+            </ul>
+        </nav>
+
+        <div class="top-side">
+            <h1 style="padding-top: 6%; padding-bottom: 5%; font-size: 150px;">Menu</h1>
+            <p style="font-size: 30px;">The mission is simple: serve delicious, affordable food <br> that guests will want to return to week after week</p>
+        </div>
+    </div>
+        <div class="menu">
+            <div class="dishes">
+                <div class="category">
+                    <h2>APPETIZERS</h2>
+                    <p><h3>Siew's pickle plate</h3><br> with sanscho cabbage, mustard zucchini and panch phoron purple cauliflower <br> 12</p>
+                    <p><h3>Little gem salad</h3><br> with shallot vinaigrette, fennel, avocado, mendocino nori <br> black sesame, and miso creme fraiche <br> 13 </p>
+                    <p><h3>Hierloom tomato salad</h3><br> with cucumbers,with sweet fermented chill sauce <br> 14 </p>
+                    <p><h3>Pork and Schrimp dumplings (5 pcs)</h3><br> with royu and mayer ponzu dipping sauce and scollions <br> 15 </p>
+                </div>
+                <div class="category">
+                    <h2>RICE</h2>
+                    <p><h3>Fried local sanddab donburi </h3><br> with sauce gribiche, sansho cabbage, sunomono cucumber, and scollins <br> 20</p>
+                    <p><h3>Monterey bay squid and pork fried rice</h3><br> with broccolini, cherry tomatoes, cilantro, basil and spicy shrimp-chilli paste <br> 17 </p>
+                </div>
+                <div class="category">
+                    <h2>RAMEN</h2>
+                    <p><h3>Classic shoyu ramen</h3><br> with pork chashu, shoyu-marineted egg, <br> pepperonata, roasted summer squash, scalliors, <br> and mizuna <br> 21,5 </p>
+                    <p><h3>Veggie meyer lemon shoyu ramen</h3><br> with salt-cured egg, bok choy, early girl tomato confit <br> and komatsuna <br> 21,5 </p>
+                    <p><h3>Miso ramen</h3><br> with pork chashu, shoyu-marinated egg, butter corn <br> roasted eggplant, rayu, and shungiku <br> 21.5 </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="bottom-side"></div>
+
 
 </body>
