--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <nav>
             <ul class="navbar">
                 <li class="left"><a href="index.html">Welcome</a></li>
-                <li class="left"><a href="Menu.html"></a>Menu</li>
-                <li class="right"><a href="Reserve.html"></a>Reservations</li>
-                <li class="right"><a href="Order.html"></a>Order now</li>
-                <li class="right"><a href="Contact.html"></a>Contact</li>
+                <li class="left"><a href="Menu.html">Menu</a></li>
+                <li class="right"><a href="Reserve.html">Reservations</a></li>
+                <li class="right"><a href="Order.html">Order now</a></li>
+                <li class="right"><a href="Contact.html">Contact</a></li>
 
             </ul>
         </nav>
