--- a/Menu.html
+++ b/Menu.html
@@ -53,6 +53,11 @@
             </div>
         </div>
 
+        <div class="add">
+           <h1>ADD</h1>
+           <div class="additives">cos cos</div>
+        </div>
+
         <div class="bottom-side"></div>
 
 
