--- a/Menu.html
+++ b/Menu.html
@@ -54,9 +54,15 @@
         </div>
 
         <div class="add">
-           <h1>ADD</h1>
-           <div class="additives">cos cos</div>
+           <h1>ADD</h1></div>
+
+        
+        <div class="slider">
+            <h2>A</h2>
+            <p></p>
         </div>
+
+
 
         <div class="bottom-side"></div>
 
