Adding some script

--- a/Menu.html
+++ b/Menu.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+  <script src="script.js"></script>
   <title>Menu</title>
 
 </head>
@@ -58,10 +59,29 @@
 
         
         <div class="slider">
-            <h2>A</h2>
-            <p></p>
+            <div>
+                <h2>Additions</h2><br>
+                <p>Egg <br> 2</p>
+                <p>Garlic chilli paste<br>3</p>
+                <p>Pork chashu <br> 3</p>
+                <p>Roasted mushrooms <br> 5</p>
+                <p>Butter corn <br> 4</p>
+            </div>
         </div>
 
+        <div class="button_drinks">
+            <button onclick="myFunction()"> Drinks </button>
+        </div>
+        <div id="slider_drinks">
+            <h2>Cos</h2>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+        </div>
 
 
         <div class="bottom-side"></div>
