--- a/Menu.html
+++ b/Menu.html
@@ -73,14 +73,30 @@
             <button onclick="myFunction()"> Drinks </button>
         </div>
         <div id="slider_drinks">
-            <h2>Cos</h2>
-            <p></p>
-            <p></p>
-            <p></p>
-            <p></p>
-            <p></p>
-            <p></p>
-            <p></p>
+            <h2>Draft Beer</h2>
+            <p>Moonlight Reality Czeck Pilsner <br> (16oz draft) 8</p>
+            <p>Original Pattern Undo the Voodoo IPA <br> (16oz draft) 8</p>
+            <h2>Sake</h2>
+            <p>Den Sake Batch #8, Oakland <br> glass 13</p>
+            <p>Den Sake Batch #13, Oakland <br> (500ml bottle) 45*</p>
+            <p>One cup Kibo Junmai Sake (180ml) 13</p>
+            <h2>Wine</h2>
+            <p>2020 Tendu Rose, Dunnigan Hills <br> (375ml can) 13</p>
+            <p>2020 Xarmant Txakoli <br> (250ml can) 13</p>
+            <p>2020 Companion Wine Co, Jolie-Laide <br> (375ml can) 15</p>
+        </div>
+        <div id="drinks_back">
+            <h2>Non Alcoholic</h2>
+            <p>Moonlight Reality Czeck Pilsner <br> (16oz draft) 8</p>
+            <p>Original Pattern Undo the Voodoo IPA <br> (16oz draft) 8</p>
+            <h2>Sake</h2>
+            <p>Den Sake Batch #8, Oakland <br> glass 13</p>
+            <p>Den Sake Batch #13, Oakland <br> (500ml bottle) 45*</p>
+            <p>One cup Kibo Junmai Sake (180ml) 13</p>
+            <h2>Wine</h2>
+            <p>2020 Tendu Rose, Dunnigan Hills <br> (375ml can) 13</p>
+            <p>2020 Xarmant Txakoli <br> (250ml can) 13</p>
+            <p>2020 Companion Wine Co, Jolie-Laide <br> (375ml can) 15</p>
         </div>
 
 
