--- a/Menu.html
+++ b/Menu.html
@@ -66,11 +66,13 @@
                 <p>Pork chashu <br> 3</p>
                 <p>Roasted mushrooms <br> 5</p>
                 <p>Butter corn <br> 4</p>
+                <p>Fries <br> 5 </p>
+                <p>Chicken Wings <br> 7</p>
             </div>
         </div>
 
         <div class="button_drinks">
-            <button onclick="myFunction()"> Drinks </button>
+            <button onclick="myFunction()" id="myButton1"> Drinks </button>
         </div>
         <div id="slider_drinks">
             <h2>Draft Beer</h2>
@@ -86,17 +88,16 @@
             <p>2020 Companion Wine Co, Jolie-Laide <br> (375ml can) 15</p>
         </div>
         <div id="drinks_back">
-            <h2>Non Alcoholic</h2>
-            <p>Moonlight Reality Czeck Pilsner <br> (16oz draft) 8</p>
-            <p>Original Pattern Undo the Voodoo IPA <br> (16oz draft) 8</p>
-            <h2>Sake</h2>
-            <p>Den Sake Batch #8, Oakland <br> glass 13</p>
-            <p>Den Sake Batch #13, Oakland <br> (500ml bottle) 45*</p>
-            <p>One cup Kibo Junmai Sake (180ml) 13</p>
-            <h2>Wine</h2>
-            <p>2020 Tendu Rose, Dunnigan Hills <br> (375ml can) 13</p>
-            <p>2020 Xarmant Txakoli <br> (250ml can) 13</p>
-            <p>2020 Companion Wine Co, Jolie-Laide <br> (375ml can) 15</p>
+            <h2>Sodas</h2>
+            <p>Leaves and Flowers hot tea:<br> Genmaicha or Turmeric Wellness <br> 5</p>
+            <p>Fentiman's cola <br> (275ml) 5</p>
+            <p>Fentiman's sparkling lemonade <br> (275ml bottle) 5</p>
+            <p>Dram Gingergrass+ CBD Sparkling Water <br> (350ml can) 5</p>
+            <p>Blueberry mint Limeade <br> 6</p>
+            <h2>Virgin Drinks</h2>
+            <p>Virgin Mohito <br> glass 13</p>
+            <p>Virgin Sex on The Beach <br> glass 15</p>
+            <p>Virgin Pinacolada <br> glass 14</p>
         </div>
 
 
