--- a/Menu.html
+++ b/Menu.html
@@ -75,7 +75,7 @@
             <button onclick="myFunction()" id="myButton1"> Drinks </button>
         </div>
         <div id="slider_drinks">
-            <h2>Draft Beer</h2>
+            <h2 style="margin-top: 2vh;">Draft Beer</h2>
             <p>Moonlight Reality Czeck Pilsner <br> (16oz draft) 8</p>
             <p>Original Pattern Undo the Voodoo IPA <br> (16oz draft) 8</p>
             <h2>Sake</h2>
@@ -85,10 +85,10 @@
             <h2>Wine</h2>
             <p>2020 Tendu Rose, Dunnigan Hills <br> (375ml can) 13</p>
             <p>2020 Xarmant Txakoli <br> (250ml can) 13</p>
-            <p>2020 Companion Wine Co, Jolie-Laide <br> (375ml can) 15</p>
+            <p style="margin-bottom: 4vh;">2020 Companion Wine Co, Jolie-Laide <br> (375ml can) 15</p>
         </div>
         <div id="drinks_back">
-            <h2>Sodas</h2>
+            <h2 style="margin-top: 2vh;">Sodas</h2>
             <p>Leaves and Flowers hot tea:<br> Genmaicha or Turmeric Wellness <br> 5</p>
             <p>Fentiman's cola <br> (275ml) 5</p>
             <p>Fentiman's sparkling lemonade <br> (275ml bottle) 5</p>
@@ -97,7 +97,7 @@
             <h2>Virgin Drinks</h2>
             <p>Virgin Mohito <br> glass 13</p>
             <p>Virgin Sex on The Beach <br> glass 15</p>
-            <p>Virgin Pinacolada <br> glass 14</p>
+            <p style="margin-bottom: 4vh;">Virgin Pinacolada <br> glass 14</p>
         </div>
 
 
