--- a/Reserve.html
+++ b/Reserve.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="src/style_reservations.css">
   <script src="script.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+
 
   <title>Reserve</title>
 
@@ -18,8 +20,9 @@
             <ul class="navbar">
                 <li class="left"><a href="index.html">Welcome</a></li>
                 <li class="left"><a href="Menu.html">Menu</a></li>
-                <li class="right"><a href="Reserve.html">Reservations</a></li>
-                <li class="right"><a href="Order.html">Order now</a></li>
+                <li class="middle">RamenTime</li>
+                <li class="right"><a href="Reserve.html" style="color:rgb(185, 123, 133)">Reservations</a></li>
+                <!-- <li class="right"><a href="Order.html">Order now</a></li> -->
                 <li class="right"><a href="Contact.html">Contact</a></li>
 
             </ul>
