--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="src/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+
 
   <title>Ramen Bar</title>
 
@@ -13,10 +15,11 @@
     <div class="bg">
         <nav>
             <ul class="navbar">
-                <li class="left"><a href="index.html">Welcome</a></li>
+                <li class="left"><a href="index.html" style="color:rgb(185, 123, 133)">Welcome</a></li>
                 <li class="left"><a href="Menu.html">Menu</a></li>
+                <li class="middle">RamenTime</li>
                 <li class="right"><a href="Reserve.html">Reservations</a></li>
-                <li class="right"><a href="Order.html">Order now</a></li>
+                <!-- <li class="right"><a href="Order.html">Order now</a></li> -->
                 <li class="right"><a href="Contact.html">Contact</a></li>
 
             </ul>
