--- a/Contact.html
+++ b/Contact.html
@@ -19,9 +19,10 @@
             <ul class="navbar">
                 <li class="left"><a href="index.html">Welcome</a></li>
                 <li class="left"><a href="Menu.html">Menu</a></li>
+                <li class="middle">RamenTime</li>
                 <li class="right"><a href="Reserve.html">Reservations</a></li>
-                <li class="right"><a href="Order.html">Order now</a></li>
-                <li class="right"><a href="Contact.html">Contact</a></li>
+                <!-- <li class="right"><a href="Order.html">Order now</a></li> -->
+                <li class="right"><a href="Contact.html" style="color:rgb(185, 123, 133)">Contact</a></li>
 
             </ul>
         </nav>
