--- a/Menu.html
+++ b/Menu.html
@@ -19,8 +19,9 @@
             <ul class="navbar">
                 <li class="left"><a href="index.html">Welcome</a></li>
                 <li class="left"><a href="Menu.html" style="color:rgb(185, 123, 133)">Menu</a></li>
+                <li class="middle">RamenTime</li>
                 <li class="right"><a href="Reserve.html">Reservations</a></li>
-                <li class="right"><a href="Order.html">Order now</a></li>
+                <!-- <li class="right"><a href="Order.html">Order now</a></li> -->
                 <li class="right"><a href="Contact.html">Contact</a></li>
 
             </ul>
