small chages in navbar

--- a/Reserve.html
+++ b/Reserve.html
@@ -38,7 +38,7 @@
             </div>
             <div class="elem-group">
               <label for="phone">Your Phone</label>
-              <input type="tel" id="phone" name="visitor_phone" placeholder="498-348-3872" pattern=(\d{3})-?\s?(\d{3})-?\s?(\d{4}) required>
+              <input type="tel" id="phone" name="visitor_phone" placeholder="+48 500 474 573" required>
             </div>
             <div class="elem-group inlined">
               <label for="adult">Adults</label>
