responsivness of menu

--- a/Menu.html
+++ b/Menu.html
@@ -14,7 +14,6 @@
 </head>
 <body>
     
-    <div class="bg">
         <nav>
             <ul class="navbar">
                 <li class="left"><a href="index.html">Welcome</a></li>
@@ -26,10 +25,11 @@
 
             </ul>
         </nav>
-
+    
+    <div class="bg">
         <div class="top-side">
-            <h1 style="padding-top: 6%; padding-bottom: 5%; font-size: 150px;">Menu</h1>
-            <p style="font-size: 30px;">The mission is simple: serve delicious, affordable food <br> that guests will want to return to week after week</p>
+            <h1 style="padding-top: 6%; padding-bottom: 5%; font-size: 20vh;">Menu</h1>
+            <p style="font-size: 4vh;">The mission is simple: serve delicious, affordable food <br> that guests will want to return to week after week</p>
         </div>
     </div>
         <div class="menu">
@@ -67,7 +67,6 @@
                     </div>
                 </div>
             </div>
-        </div>
 
         <div class="add">
            <h1>ADD</h1></div>
@@ -86,33 +85,39 @@
             </div>
         </div>
 
-        <div class="button_drinks">
-            <button onclick="myFunction()" id="myButton1"> Drinks </button>
-        </div>
-        <div id="slider_drinks">
-            <h2 style="margin-top: 2vh;">Draft Beer</h2>
-            <p>Moonlight Reality Czeck Pilsner <br> (16oz draft) 8</p>
-            <p>Original Pattern Undo the Voodoo IPA <br> (16oz draft) 8</p>
-            <h2>Sake</h2>
-            <p>Den Sake Batch #8, Oakland <br> glass 13</p>
-            <p>Den Sake Batch #13, Oakland <br> (500ml bottle) 45*</p>
-            <p>One cup Kibo Junmai Sake (180ml) 13</p>
-            <h2>Wine</h2>
-            <p>2020 Tendu Rose, Dunnigan Hills <br> (375ml can) 13</p>
-            <p>2020 Xarmant Txakoli <br> (250ml can) 13</p>
-            <p style="margin-bottom: 4vh;">2020 Companion Wine Co, Jolie-Laide <br> (375ml can) 15</p>
-        </div>
-        <div id="drinks_back">
-            <h2 style="margin-top: 2vh;">Sodas</h2>
-            <p>Leaves and Flowers hot tea:<br> Genmaicha or Turmeric Wellness <br> 5</p>
-            <p>Fentiman's cola <br> (275ml) 5</p>
-            <p>Fentiman's sparkling lemonade <br> (275ml bottle) 5</p>
-            <p>Dram Gingergrass+ CBD Sparkling Water <br> (350ml can) 5</p>
-            <p>Blueberry mint Limeade <br> 6</p>
-            <h2>Virgin Drinks</h2>
-            <p>Virgin Mohito <br> glass 13</p>
-            <p>Virgin Sex on The Beach <br> glass 15</p>
-            <p style="margin-bottom: 4vh;">Virgin Pinacolada <br> glass 14</p>
+        <div class="drinks">
+            <div>
+            <div class="button_drinks">
+                <button onclick="myFunction()" id="myButton1">Drinks </button>
+            </div>
+            <div class="containerDrinks">
+                <div id="slider_drinks">
+                    <h2 style="margin-top: 2vh;">Draft Beer</h2>
+                    <p>Moonlight Reality Czeck Pilsner <br> (16oz draft) 8</p>
+                    <p>Original Pattern Undo the Voodoo IPA <br> (16oz draft) 8</p>
+                    <h2>Sake</h2>
+                    <p>Den Sake Batch #8, Oakland <br> glass 13</p>
+                    <p>Den Sake Batch #13, Oakland <br> (500ml bottle) 45*</p>
+                    <p>One cup Kibo Junmai Sake (180ml) 13</p>
+                    <h2>Wine</h2>
+                    <p>2020 Tendu Rose, Dunnigan Hills <br> (375ml can) 13</p>
+                    <p>2020 Xarmant Txakoli <br> (250ml can) 13</p>
+                    <p style="margin-bottom: 4vh;">2020 Companion Wine Co, Jolie-Laide <br> (375ml can) 15</p>
+                </div>
+                <div id="drinks_back">
+                    <h2 style="margin-top: 2vh;">Sodas</h2>
+                    <p>Leaves and Flowers hot tea:<br> Genmaicha or Turmeric Wellness <br> 5</p>
+                    <p>Fentiman's cola <br> (275ml) 5</p>
+                    <p>Fentiman's sparkling lemonade <br> (275ml bottle) 5</p>
+                    <p>Dram Gingergrass+ CBD Sparkling Water <br> (350ml can) 5</p>
+                    <p>Blueberry mint Limeade <br> 6</p>
+                    <h2>Virgin Drinks</h2>
+                    <p>Virgin Mohito <br> glass 13</p>
+                    <p>Virgin Sex on The Beach <br> glass 15</p>
+                    <p style="margin-bottom: 4vh;">Virgin Pinacolada <br> glass 14</p>
+                </div>
+            </div>
+            </div>
         </div>
 
 
