menu styling correction

--- a/Menu.html
+++ b/Menu.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-    
+    <div>
         <nav>
             <ul class="navbar">
                 <li class="left"><a href="index.html">Welcome</a></li>
@@ -25,10 +25,10 @@
 
             </ul>
         </nav>
-    
+    </div>
     <div class="bg">
         <div class="top-side">
-            <h1 style="padding-top: 6%; padding-bottom: 5%; font-size: 20vh;">Menu</h1>
+            <h1 style="padding-top: 6%; padding-bottom: 5vh; font-size: 20vh;">Menu</h1>
             <p style="font-size: 4vh;">The mission is simple: serve delicious, affordable food <br> that guests will want to return to week after week</p>
         </div>
     </div>
