--- a/Reserve.html
+++ b/Reserve.html
@@ -17,15 +17,19 @@
     
     <div class="bg">
         <nav>
-            <ul class="navbar">
-                <li class="left"><a href="index.html">Welcome</a></li>
-                <li class="left"><a href="Menu.html">Menu</a></li>
-                <li class="middle">RamenTime</li>
-                <li class="right"><a href="Reserve.html" style="color:rgb(185, 123, 133)">Reservations</a></li>
-                <!-- <li class="right"><a href="Order.html">Order now</a></li> -->
-                <li class="right"><a href="Contact.html">Contact</a></li>
-
-            </ul>
+          <button class="navbar-toggle" id="js-navbar-toggle" onclick="toggleFunction()">
+              <i class="fa fa-bars"></i>
+          </button>
+          <button class="close-toggle" id="js-close-toggle">
+              <i class="fa fa-close"></i>
+          </button>
+          <ul class="navbar" id="js-navbar">
+              <li class="left"><a href="index.html">Welcome</a></li>
+              <li class="left"><a href="Menu.html" style="color:rgb(185, 123, 133)">Menu</a></li>
+              <li class="middle">RamenTime</li>
+              <li class="right"><a href="Reserve.html">Reservations</a></li>
+              <li class="right"><a href="Contact.html">Contact</a></li>
+          </ul>
         </nav>
         <form action="reservation.php" method="post">
             <div class="elem-group">
@@ -56,7 +60,7 @@
               <label for="message">Anything Else?</label>
               <textarea id="message" name="visitor_message" placeholder="Tell us anything else that might be important." required></textarea>
             </div>
-            <button type="submit">Book The Table</button>
+            <button class="submitButton" type="submit">Book The Table</button>
           </form>
     </div>
 
