--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="src/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+  <script src="script.js"></script>
 
 
   <title>Ramen Bar</title>
@@ -14,16 +15,20 @@
 <body>
     <div class="bg">
         <nav>
-            <ul class="navbar">
+            <button class="navbar-toggle" id="js-navbar-toggle" onclick="toggleFunction()">
+                <i class="fa fa-bars"></i>
+            </button>
+            <button class="close-toggle" id="js-close-toggle">
+                <i class="fa fa-close"></i>
+            </button>
+            <ul class="navbar" id="js-navbar">
                 <li class="left"><a href="index.html" style="color:rgb(185, 123, 133)">Welcome</a></li>
                 <li class="left"><a href="Menu.html">Menu</a></li>
                 <li class="middle">RamenTime</li>
                 <li class="right"><a href="Reserve.html">Reservations</a></li>
-                <!-- <li class="right"><a href="Order.html">Order now</a></li> -->
                 <li class="right"><a href="Contact.html">Contact</a></li>
-
             </ul>
-        </nav>
+          </nav>
 
         <h1>RAMENTIME</h1>
 
